--- a/index.html
+++ b/index.html
@@ -11,9 +11,16 @@
   <div id='main'>
 
     <h2>GitHub Search</h2>
-
+    <br/>
+    <h4>Search by User</h4>
     <form id='github-form'>
       <input id='search' type='text' name='search'>
+      <input type='submit' name='submit'/>
+    </form>
+    <br/>
+    <h4>Search by Repo</h4>
+    <form id='repo-form'>
+      <input id='repo-search' type='text' name='reposearch'>
       <input type='submit' name='submit'/>
     </form>
 
