--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <h2>GitHub Search</h2>
 
     <form id='github-form'>
-      <input id='search' type='text' name='search'>
+      <input id='search' type='text' name='search'><br>
+      
       <input type='submit' name='submit'/>
     </form>
 
