--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta name='viewport' content='width=device-width, initial-scale=1.0'/>
   <meta http-equiv='X-UA-Compatible' content='ie=edge'/>
   <title>Document</title>
-  <script src='js/index.js'></script>
   <link rel='stylesheet' href='index.css'/>
 </head>
 <body>
@@ -14,7 +13,8 @@
 
     <form id='github-form'>
       <input id='search' type='text' name='search'>
-      <input type='submit' name='submit'/>
+      <input type='submit' name='submit' value='search user'/>
+      <input type='submit' name='submit' value='search repo'/>
     </form>
 
     <div id='github-container'>
@@ -29,5 +29,6 @@
 
   </div>
 
+  <script src='js/index.js'></script>
 </body>
 </html>
