--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <h2>GitHub Search</h2>
 
+    <button id="username-repo-search-toggle">Search By Username</button><br>
     <form id='github-form'>
       <input id='search' type='text' name='search'>
       <input type='submit' name='submit'/>
